manifests/kube-starter/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-starter
  labels:
    app.kubernetes.io/name: kube-starter
    app.kubernetes.io/part-of: kube-starter
