manifests/kube-starter/base/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-starter
  namespace: kube-starter
  labels:
    app.kubernetes.io/name: kube-starter
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: kube-starter
spec:
  ingressClassName: nginx
  rules:
    - host: kube-starter.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-starter-frontend
                port:
                  number: 80
